[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsddos"
version = "0.1.0"
description = "IoT DDoS detection and simulation framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "NS-DDoS Contributors" }
]
keywords = ["cybersecurity", "ddos", "iot", "networking", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking",
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "loguru>=0.7,<1.0",
  "PyYAML>=6.0,<7.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "isort",
  "httpx",
]

[project.scripts]
nsddos = "nsddos.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["nsddos*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["external"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
