[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
maintainers = [
  {name = "N S Akash"}
]
name = "nsddos"
version = "0.9.0b7"
description = "IoT DDoS detection and simulation framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "NS-DDoS Contributors" }
]
keywords = ["cybersecurity", "ddos", "iot", "networking", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking",
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "loguru>=0.7,<1.0",
  "PyYAML>=6.0,<7.0",
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "black>=24.4",
  "ruff>=0.5",
  "mypy>=1.10",
  "isort>=5.13",
  "httpx>=0.27",
]

[project.scripts]
nsddos = "nsddos.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.package-data]
nsddos = [
  "bootstrap/templates/runtime/**/*.Dockerfile",
  "bootstrap/templates/runtime/**/*.py",
  "bootstrap/templates/runtime/**/*.sh",
  "bootstrap/templates/runtime/**/*.yml",
  "ui/templates/**/*.html",
  "ui/static/**/*.css",
  "ui/static/**/*.js",
  "ui/static/**/*.svg",
  "ui/static/**/*.ttf",
]
[project.urls]
Homepage = "https://github.com/nsakash7523/nsddos"
Repository = "https://github.com/nsakash7523/nsddos"
Issues = "https://github.com/nsakash7523/nsddos/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nsddos*"]
exclude = ["tests*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
exclude = ["external"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: real Docker/runtime end-to-end validations",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.isort]
profile = "black"

